# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-01-05  Piotr Ożarowski
	* Copyright years updated
	* Version changed to 0.9-rc2
	* E-mails removed from changelog
	* TODO updated

2007-01-05  Vasco Nunes
	* Updated portuguese translation

2007-01-04  Vasco Nunes
	* Updated Swedish translation (thanks to Daniel Nylander)
	* Updated Czech translation and CSFD movie pluging (thanks to Blondak)
	* Updated Portuguese Brazilian translation (thanks to Fábio Nogueira)
	* Fixed win32 gtk locale issue
	* Fixed win32 default system font directory detection (for use in preferences)
	* Updated French translation (thanks to Pierre-Luc Lévi)
	* Latex is no more the default entry for html export plugin :)

2007-01-03  Vasco Nunes
	* Using cPickle over pickle for serialization. Config files are now fully cross-platform.

2007-01-03  Piotr Ożarowski
	* Install Polish manpage in ISO-8859-2 encoding
	* Fix clean rule
	* Sort by last added movies option added
	* pysqlite1.1 is not needed anymore

2007-01-02  Piotr Ożarowski
	* Copy volume/collection data when cloning movie
	* Fix displaying loan info (cached data can be obsolete)

2007-01-01  Jessica K. Parth
	* "fixed" slow populate function
	* clear_filter -> don't update four times the maintreeview
	* german translation update

2007-01-01  Piotr Ożarowski
	* Filmweb movie plugin updated
	* Added "limit search results to x movies" in preferences
	* Scroll movie list when selecting first/prev/next/last movie button
	* Copy video codec data when cloning movie
	* Fixed displaying volume/collection loan status
	* Seen status can be now set without opening edit window

2006-12-30  Piotr Ożarowski
	* Compare lower() values while importing movies
	* Seen icon moved near to rating, loaned icon removed
	* Speed up main list filling
	* Hide number column option added
	* Add Jessica's icon for seen/unseen movies

2006-12-30  Vasco Nunes
	* Under MacOSX Preview.app is used for pdfs now
